@@ -16,6 +16,10 @@ PHP                                                                        NEWS
   . Fixed bug #69740 (finally in generator (yield) swallows exception in
     iteration). (Nikita)
 
+- GMP:
+  . Fixed bug #69803 (gmp_random_range() modifies second parameter if GMP
+    number). (Nikita)
+
 - PDO_pgsql:
   . Fixed bug #69752 (PDOStatement::execute() leaks memory with DML
     Statements when closeCuror() is u). (Philip Hofstetter)
